fix: adjust prevent image overflow on all the sections

--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,7 +1,7 @@
 .destinations-cards{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     gap:24px;
 }
 
@@ -22,8 +22,8 @@
     margin-bottom: 45px;
 }
 
-.card.card.fremantle{
-    background: url(../img/fremantle-card.jpg);
+.card.card.cottesloe{
+    background: url(../img/cottesloe-card.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -51,14 +51,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    gap:24px;
+    
     }
 }
 
 @media screen and (min-width: 1024px) {
     .card{
-        width: 470px;
+        width: 430px;
         height: 308px;
     }
 
@@ -75,10 +74,7 @@
 }
 
 @media screen and (min-width: 1920px) {
-    .destinations-cards{
-        width: 1400px;
-        margin: 0 auto 56px;
-    }
+    
     .card{
         width: 650px;
     }
